Prevent wp admin bar from overlapping Foundation menus
* adds responsive off-canvas offsets

--- a/src/assets/scss/global/_wp-admin.scss
+++ b/src/assets/scss/global/_wp-admin.scss
@@ -3,9 +3,21 @@
   position: fixed !important;
 }
 
-// Make sure that the WP admin-bar does not overlap the sticky top bar
-body.admin-bar.f-topbar-fixed {
-  .sticky.fixed {
-    margin-top: rem-calc(32);
+// Make sure that the WP admin-bar does not overlap Foundation components
+body.admin-bar {
+  // Offset sticky top bar
+  &.f-topbar-fixed {
+    .sticky.fixed {
+      margin-top: rem-calc(32);
+    }
+  }
+  // Offset mobile off-canvas menu
+  &.offcanvas {
+    .off-canvas.is-open {
+      top: rem-calc(46);
+      @include breakpoint(783) {
+        top: rem-calc(32);
+      }
+    }
   }
 }
